--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,11 @@
 version: 1.0.{build}
-build:
-  verbosity: minimal
+image: Ubuntu
+stack: jdk 11
+branches:
+  only:
+    - master
+build: off
+install:
+  - java -jar ./artifacts/app-order.jar &
+build_script:
+  - ./gradlew test --info
